# GPU_IPC

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
Assets/scene/: parameterSetting.txt
Assets/scene/linux/: cloth_mesh_files.txt  manipulation_start_pos.txt  parameterSetting.txt  volume_mesh_files.txt
Assets/scene/windows/: parameterSetting.txt  volume_mesh_files.txt
Assets/tetMesh/: bunny.msh  bunny2.msh
GPU_IPC/: ACCD.cu  ACCD.cuh  FrictionUtils.cuh  GIPC.cu  GIPC.cuh  GIPC_PDerivative.cuh  MASPreconditioner.cu  MASPreconditioner.cuh  PCG_SOLVER.cu  PCG_SOLVER.cuh  QRSVD.hpp  cuda_tools.h  device_fem_data.cu  device_fem_data.cuh  device_utils.h  eigen_data.h  femEnergy.cu  femEnergy.cuh  fem_parameters.h  generateVideo.py  gipc_path.h  givens.hpp  gl_main.cpp  gpu_eigen_libs.cu  gpu_eigen_libs.cuh  load_mesh.cpp  load_mesh.h  mlbvh.cu  mlbvh.cuh
GPU_IPC/details/: device_utils.inl
GPU_IPC/zensim/: Reflection.h  TypeAlias.hpp
GPU_IPC/zensim/geometry/: Distance.hpp  SpatialQuery.hpp
GPU_IPC/zensim/math/: Complex.hpp  MathUtils.h  MatrixUtils.inl  Vec.h  VecInterface.hpp
GPU_IPC/zensim/math/bit/: Bits.h
GPU_IPC/zensim/math/matrix/: Eigen.hpp  Givens.hpp  QRSVD.hpp  Transform.hpp  Utility.h
GPU_IPC/zensim/meta/: ControlFlow.h  Functional.h  Meta.h  Relationship.h  Sequence.h
GPU_IPC/zensim/types/: BuilderBase.hpp  Function.h  Iterator.h  Optional.h  Pointers.hpp  Polymorphism.h  Property.h  SmallVector.hpp  Tuple.h
